Добавил удаление топологий
