# clabgate/app/controllers/tolopogies_controller.go
@@ -12,7 +12,7 @@ import (
 // TopologiesGet func for view of list tasks.
 // @Description List tasks. Roles: [student, admin, instructor]
 // @Summary list tasks
-// @Tags Tasks
+// @Tags Topology
 // @Accept json
 // @Produce json
 // @Param form body usecases.TopologiesGetInputDTO true "topology namespace"
@@ -47,13 +47,13 @@ func TopologiesGet(c *fiber.Ctx) error {
 }
 
 // TopologiesCreate func for create personal topologies.
-// @Description List tasks. Roles: [student, admin, instructor]
-// @Summary list tasks
-// @Tags Tasks
+// @Description create personal topology. Roles: [student, admin, instructor]
+// @Summary create personal topologies
+// @Tags Topology
 // @Accept json
 // @Produce json
-// @Param form body usecases.TopologiesGetInputDTO true "topology namespace"
-// @Success 200 {object} usecases.TopologiesGetResponse
+// @Param form body usecases.TopologiesCreateInputDTO true "create params"
+// @Success 200 {object} usecases.TopologiesCreateResponse
 // @Security ApiKeyAuth
 // @Router /v1/topologies/create [post]
 func TopologiesCreate(c *fiber.Ctx) error {
@@ -62,7 +62,7 @@ func TopologiesCreate(c *fiber.Ctx) error {
 		return err
 	}
 	diLoggerConf := logs.NewZeroLoggerConf(c)
-	dto := usecases.TopologiesGetInputDTO{}
+	dto := usecases.TopologiesCreateInputDTO{}
 	err = utils.FiberValidatorBase(c, &dto)
 	if err != nil {
 		return err
@@ -72,7 +72,44 @@ func TopologiesCreate(c *fiber.Ctx) error {
 		return err
 	}
 	defer container.Close()
-	uc, err := container.TopologiesGetUC()
+	uc, err := container.TopologiesCreateUC()
+	if err != nil {
+		return err
+	}
+	output, err := uc.SetContext(user).Execute(dto)
+	if err != nil {
+		return err
+	}
+	return utils.FiberSuccessResponse{Result: output}
+}
+
+// TopologiesDelete func for delete personal topologies.
+// @Description delete personal topology. Roles: [student, admin, instructor]
+// @Summary delete personal topologies
+// @Tags Topology
+// @Accept json
+// @Produce json
+// @Param form body usecases.TopologiesDeleteInputDTO true "delete params"
+// @Success 200 {object} usecases.TopologiesDeleteResponse
+// @Security ApiKeyAuth
+// @Router /v1/topologies/delete [post]
+func TopologiesDelete(c *fiber.Ctx) error {
+	user, err := auth.ExtractTokenMetadata(c, []string{})
+	if err != nil {
+		return err
+	}
+	diLoggerConf := logs.NewZeroLoggerConf(c)
+	dto := usecases.TopologiesDeleteInputDTO{}
+	err = utils.FiberValidatorBase(c, &dto)
+	if err != nil {
+		return err
+	}
+	container, err := di.NewDIContainer(diLoggerConf)
+	if err != nil {
+		return err
+	}
+	defer container.Close()
+	uc, err := container.TopologiesDeleteUC()
 	if err != nil {
 		return err
 	}
